--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -9,7 +9,7 @@
         "bUcvebn-BE5h",
         "MVTpgUuvCsg7"
       ],
-      "authorship_tag": "ABX9TyMu6ETu3arOtfi7/jVZ+yY2",
+      "authorship_tag": "ABX9TyMiKH7M6GsloGL4Ptcjd5Ih",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "4. Tom Vaissiere\n",
         "\n",
         "\n",
-        "_(v1.0, last updated January, 26, 2022)_\n",
+        "_(v1.0, last updated February, 02, 2022 - 4:47 PM)_\n",
         "\n",
         "---"
       ],
@@ -407,6 +407,12 @@
         "    prior = ((t[1:] - t[:-1]) == 1).astype(int)\n",
         "    prior = np.hstack(([0], prior))\n",
         "\n",
+        "    # Calculate previous average tone value\n",
+        "    s_avg = df['Go/NoGo'][:-1]\n",
+        "    s_avg = (s_avg - np.mean(s_avg))/np.std(s_avg)\n",
+        "    s_avg = np.hstack(([0], s_avg))\n",
+        "    s_avg = s_avg * prior  # for trials without a valid previous trial, set to 0\n",
+        "\n",
         "    # Calculate previous correct answer\n",
         "    h = (df[\"Correct?\"][:-1] * 2 - 1).astype(int)   # map from (0,1) to (-1,1)\n",
         "    h = np.hstack(([0], h))\n",
@@ -419,7 +425,8 @@
         "    \n",
         "    ## note here that it could be useful to have different stimulus values \n",
         "    ## important to respect the dictionary psy.COLORS hence the name of the specific names of the inputs\n",
-        "    inputs = dict(s1 = np.array(df['Go/NoGo'])[:, None], \n",
+        "    inputs = dict(s1 = np.array(df['Go/NoGo'])[:, None],\n",
+        "                  s_avg = np.array(s_avg)[:, None], \n",
         "                  h = np.array(h)[:, None],\n",
         "                  c = np.array(c)[:, None])\n",
         "\n",
@@ -507,7 +514,7 @@
         "        new_dat = psy.trim(outData, START=0, END=12500)\n",
         "\n",
         "        # here weights could be adjusted \n",
-        "        weights = {'bias': 1, 's1': 1, 'h': 1, 'c': 1}\n",
+        "        weights = {'bias': 1, 's1': 1, 'h': 1, 'c': 1, 's_avg':1}\n",
         "        K = np.sum([weights[i] for i in weights.keys()])\n",
         "        # hyper guess are kept with default value as in the paper\n",
         "        hyper_guess = {\n",
@@ -525,14 +532,15 @@
         "        # Save interim result\n",
         "        np.savez_compressed(SPATH+os.sep+str(sID)+'_fig5b_data.npz', dat=dat)\n",
         "\n",
-        "        if figure_off == True:\n",
-        "            # save the figure\n",
-        "            fig = psy.plot_weights(dat['wMode'], dat['weights'], days=dat['new_dat'][\"dayLength\"], \n",
-        "                                   errorbar=dat['W_std'], figsize=(4.75,1.4))\n",
-        "            # plt.xlabel(None); plt.ylabel(None)\n",
-        "            # plt.subplots_adjust(0,0,1,1) \n",
-        "            plt.savefig(SPATH +os.sep+str(sID)+ \"Fig5b.pdf\")\n",
-        "\n",
+        "    if figure_off == False:\n",
+        "        print('graph')\n",
+        "        # save the figure\n",
+        "        fig = psy.plot_weights(dat['wMode'], dat['weights'], days=dat['new_dat'][\"dayLength\"], \n",
+        "                               errorbar=dat['W_std'], figsize=(4.75,1.4))\n",
+        "        # plt.xlabel(None); plt.ylabel(None)\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+str(sID)+ \"Fig5b.pdf\")\n",
+        "        plt.close('all')\n",
         "\n",
         "def plot_all(all_labels, all_w, Weights, figsize):\n",
         "    fig = plt.figure(figsize=figsize)\n",
@@ -558,7 +566,7 @@
         "    # plt.ylim(-2.5, 2.5)\n",
         "    return fig\n",
         "\n",
-        "def plotLabelsandW(geno, SPATH):\n",
+        "def plotLabelsandW(genoVar, SPATH):\n",
         "    '''\n",
         "    this function will output all the labels and wheight for a givien genotype\n",
         "    based on the corresponding files and select the genotype of interest\n",
@@ -574,15 +582,15 @@
         "    corresp['sID'] = corresp['fname'].str.split(os.sep).str[-1].str.split('_').str[0].astype(int)\n",
         "   \n",
         "    ## check and implement the genotypes\n",
-        "    try: geno\n",
-        "    except: geno = None\n",
-        "    if geno is None:\n",
-        "        geno = pd.read_csv(os.sep.join(SPATH.split(os.sep)[:-2])+os.sep+'animals.csv')\n",
+        "    # try: geno\n",
+        "    # except: geno = None\n",
+        "    # if geno is None:\n",
+        "    geno = pd.read_csv(os.sep.join(SPATH.split(os.sep)[:-1])+os.sep+'animals.csv')\n",
         "\n",
         "    corresp = pd.merge(corresp, geno, on='sID')\n",
         "\n",
         "    ## \n",
-        "    cWTorHet = corresp[corresp['geno']=='wt']\n",
+        "    cWTorHet = corresp[corresp['geno']==genoVar]\n",
         "    \n",
         "    all_labels = []\n",
         "    all_w = []\n",
@@ -605,7 +613,7 @@
         "    # plt.subplots_adjust(0,0,1,1) \n",
         "    # plt.gca().set_yticks([-2,0,2])\n",
         "    # plt.gca().set_xticklabels([])\n",
-        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6a.pdf\")\n",
+        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6a.pdf\")\n",
         "\n",
         "    plot_all(all_labels, all_w, [\"bias\"], myFigsize)\n",
         "    plt.ylim(-7, 2)\n",
@@ -613,13 +621,13 @@
         "    # plt.gca().set_xticklabels([])\n",
         "    # plt.gca().set_yticklabels([])\n",
         "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6b.pdf\")\n",
+        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6b.pdf\")\n",
         "\n",
         "    plot_all(all_labels, all_w, [\"h\"], myFigsize)\n",
         "    plt.ylim(-1, 1)\n",
         "    # # plt.gca().set_yticklabels([])\n",
         "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6d.pdf\")\n",
+        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6d.pdf\")\n",
         "\n",
         "\n",
         "    plot_all(all_labels, all_w, [\"c\"], myFigsize)\n",
@@ -627,7 +635,7 @@
         "    # plt.gca().set_yticklabels([])\n",
         "    # plt.gca().set_xticklabels([])\n",
         "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ geno+ \"Fig6e.pdf\")"
+        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6e.pdf\")\n"
       ],
       "metadata": {
         "id": "yzI1Ew69CwpG"
