--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -9,7 +9,7 @@
         "bUcvebn-BE5h",
         "MVTpgUuvCsg7"
       ],
-      "authorship_tag": "ABX9TyMiKH7M6GsloGL4Ptcjd5Ih",
+      "authorship_tag": "ABX9TyN1Lfg0BbZAkLMHjbk/lDeF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,6 +566,7 @@
         "    # plt.ylim(-2.5, 2.5)\n",
         "    return fig\n",
         "\n",
+        "\n",
         "def plotLabelsandW(genoVar, SPATH):\n",
         "    '''\n",
         "    this function will output all the labels and wheight for a givien genotype\n",
@@ -592,50 +593,155 @@
         "    ## \n",
         "    cWTorHet = corresp[corresp['geno']==genoVar]\n",
         "    \n",
-        "    all_labels = []\n",
-        "    all_w = []\n",
+        "    ## save all the data for the given genotype\n",
+        "    if (splitCriteria == False):\n",
+        "    \n",
+        "        all_labels = []\n",
+        "        all_w = []\n",
         "\n",
-        "    for i,j in cWTorHet.iterrows():\n",
-        "        print(i,j)\n",
-        "        rat = np.load(j['fname'], allow_pickle=True)['dat'].item()\n",
-        "        \n",
-        "        labels = []\n",
-        "        for j in sorted(rat['weights'].keys()):\n",
-        "            labels += [j]*rat['weights'][j]\n",
+        "        for i,j in cWTorHet.iterrows():\n",
+        "            print(i,j)\n",
+        "            rat = np.load(j['fname'], allow_pickle=True)['dat'].item()\n",
         "            \n",
-        "        all_labels += [np.array(labels)]\n",
-        "        all_w += [rat['wMode']] \n",
+        "            labels = []\n",
+        "            for j in sorted(rat['weights'].keys()):\n",
+        "                labels += [j]*rat['weights'][j]\n",
+        "                \n",
+        "            all_labels += [np.array(labels)]\n",
+        "            all_w += [rat['wMode']] \n",
         "\n",
         "\n",
-        "    myFigsize = (3.6,1.8)\n",
-        "    plot_all(all_labels, all_w, [\"s1\"], myFigsize)\n",
-        "    plt.ylim(-1, 15)\n",
-        "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    # plt.gca().set_yticks([-2,0,2])\n",
-        "    # plt.gca().set_xticklabels([])\n",
-        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6a.pdf\")\n",
+        "        myFigsize = (3.6,1.8)\n",
+        "        plot_all(all_labels, all_w, [\"s1\"], myFigsize)\n",
+        "        plt.ylim(-1, 15)\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        # plt.gca().set_yticks([-2,0,2])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig6a.pdf\")\n",
         "\n",
-        "    plot_all(all_labels, all_w, [\"bias\"], myFigsize)\n",
-        "    plt.ylim(-7, 2)\n",
-        "    # plt.gca().set_yticks([-2,0,2])\n",
-        "    # plt.gca().set_xticklabels([])\n",
-        "    # plt.gca().set_yticklabels([])\n",
-        "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6b.pdf\")\n",
+        "        plot_all(all_labels, all_w, [\"bias\"], myFigsize)\n",
+        "        plt.ylim(-7, 2)\n",
+        "        # plt.gca().set_yticks([-2,0,2])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        # plt.gca().set_yticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig6b.pdf\")\n",
         "\n",
-        "    plot_all(all_labels, all_w, [\"h\"], myFigsize)\n",
-        "    plt.ylim(-1, 1)\n",
-        "    # # plt.gca().set_yticklabels([])\n",
-        "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6d.pdf\")\n",
+        "        plot_all(all_labels, all_w, [\"h\"], myFigsize)\n",
+        "        plt.ylim(-1, 1)\n",
+        "        # # plt.gca().set_yticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig6d.pdf\")\n",
         "\n",
         "\n",
-        "    plot_all(all_labels, all_w, [\"c\"], myFigsize)\n",
-        "    plt.ylim(-1, 1)\n",
-        "    # plt.gca().set_yticklabels([])\n",
-        "    # plt.gca().set_xticklabels([])\n",
-        "    # plt.subplots_adjust(0,0,1,1) \n",
-        "    plt.savefig(SPATH +os.sep+ genoVar+ \"Fig6e.pdf\")\n"
+        "        plot_all(all_labels, all_w, [\"c\"], myFigsize)\n",
+        "        plt.ylim(-1, 1)\n",
+        "        # plt.gca().set_yticklabels([])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig6e.pdf\")\n",
+        "\n",
+        "    ##Split the data for a genotype between animals that reached criteria and those that did not. Save each separately\n",
+        "    else:\n",
+        "        \n",
+        "\n",
+        "        criteria = cWTorHet[cWTorHet['criteria'] == 1]\n",
+        "        notCriteria = cWTorHet[cWTorHet['criteria'] == 0]\n",
+        "\n",
+        "        criteria_labels = []\n",
+        "        criteria_w = []\n",
+        "\n",
+        "        notCriteria_labels = []\n",
+        "        notCriteria_w = []\n",
+        "\n",
+        "        ##fill labels and weights for animals which reached criteria of the given genotype\n",
+        "        for i,j in criteria.iterrows():\n",
+        "            print(i,j)\n",
+        "            rat = np.load(j['fname'], allow_pickle=True)['dat'].item()\n",
+        "            \n",
+        "            labels = []\n",
+        "            for j in sorted(rat['weights'].keys()):\n",
+        "                labels += [j]*rat['weights'][j]\n",
+        "                \n",
+        "            criteria_labels += [np.array(labels)]\n",
+        "            criteria_w += [rat['wMode']] \n",
+        "\n",
+        "        ##fill labels and weights for animals which did not reached criteria of the given genotype\n",
+        "        for i,j in notCriteria.iterrows():\n",
+        "            print(i,j)\n",
+        "            rat = np.load(j['fname'], allow_pickle=True)['dat'].item()\n",
+        "            \n",
+        "            labels = []\n",
+        "            for j in sorted(rat['weights'].keys()):\n",
+        "                labels += [j]*rat['weights'][j]\n",
+        "                \n",
+        "            notCriteria_labels += [np.array(labels)]\n",
+        "            notCriteria_w += [rat['wMode']] \n",
+        "\n",
+        "    ##plot and save figure for animals of the genotype which reached criteria as Fig6a,b,d,e\n",
+        "\n",
+        "        myFigsize = (3.6,1.8)\n",
+        "        plot_all(criteria_labels, criteria_w, [\"s1\"], myFigsize)\n",
+        "        plt.ylim(-1, 15)\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        # plt.gca().set_yticks([-2,0,2])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7a.pdf\")\n",
+        "\n",
+        "        plot_all(criteria_labels, criteria_w, [\"bias\"], myFigsize)\n",
+        "        plt.ylim(-7, 2)\n",
+        "        # plt.gca().set_yticks([-2,0,2])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        # plt.gca().set_yticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7b.pdf\")\n",
+        "\n",
+        "        plot_all(criteria_labels, criteria_w, [\"h\"], myFigsize)\n",
+        "        plt.ylim(-1, 1)\n",
+        "        # # plt.gca().set_yticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7d.pdf\")\n",
+        "\n",
+        "\n",
+        "        plot_all(criteria_labels, criteria_w, [\"c\"], myFigsize)\n",
+        "        plt.ylim(-1, 1)\n",
+        "        # plt.gca().set_yticklabels([])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7e.pdf\")\n",
+        "\n",
+        "    ##plot and save figure for animals of the genotype which did not reached criteria as Fig6f,g,i,j\n",
+        "\n",
+        "        myFigsize = (3.6,1.8)\n",
+        "        plot_all(notCriteria_labels, notCriteria_w, [\"s1\"], myFigsize)\n",
+        "        plt.ylim(-1, 15)\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        # plt.gca().set_yticks([-2,0,2])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7f.pdf\")\n",
+        "\n",
+        "        plot_all(notCriteria_labels, notCriteria_w, [\"bias\"], myFigsize)\n",
+        "        plt.ylim(-7, 2)\n",
+        "        # plt.gca().set_yticks([-2,0,2])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        # plt.gca().set_yticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7g.pdf\")\n",
+        "\n",
+        "        plot_all(notCriteria_labels, notCriteria_w, [\"h\"], myFigsize)\n",
+        "        plt.ylim(-1, 1)\n",
+        "        # # plt.gca().set_yticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7i.pdf\")\n",
+        "\n",
+        "\n",
+        "        plot_all(notCriteria_labels, notCriteria_w, [\"c\"], myFigsize)\n",
+        "        plt.ylim(-1, 1)\n",
+        "        # plt.gca().set_yticklabels([])\n",
+        "        # plt.gca().set_xticklabels([])\n",
+        "        # plt.subplots_adjust(0,0,1,1) \n",
+        "        plt.savefig(SPATH +os.sep+ geno+ \"Fig7j.pdf\")\n",
+        "\n"
       ],
       "metadata": {
         "id": "yzI1Ew69CwpG"
