The wrong column from allDat was used to build the dictionary.
correct should correspond to 'Correct?' #The answer was correct(1) or incorrect(0)
answer should correspond to 'Lick?' #The animal licked or withheld a lick

--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -434,8 +434,8 @@
         "        subject = subject,\n",
         "        inputs = inputs,\n",
         "        s1 = np.array(df['Go/NoGo']), # correspond to the go/noGo stim\n",
-        "        correct = np.array(df['hit']), # hit correspond to hit and correct rejection\n",
-        "        answer = np.array(df['Correct?']), #this is the answer \n",
+        "        correct = np.array(df['Correct?']), # hit correspond to hit and correct rejection\n",
+        "        answer = np.array(df['Lick?']), #this is the answer \n",
         "        y = np.array(df['choice']), #this correspond to the Lick\n",
         "        dayLength=np.array(df.groupby(['session']).size()),\n",
         "    )\n",
