--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -593,7 +593,7 @@
         "\n",
         "    return all_labels, all_w\n",
         "\n",
-        "def plotLabelsandW(genoVar, SPATH, splitCriteria = False, customlim=False):\n",
+        "def plotLabelsandW(genoVar, SPATH, splitCriteria = False, customlimTF=False):\n",
         "    '''\n",
         "    this function will output all the labels and wheight for a givien genotype\n",
         "    based on the corresponding files and select the genotype of interest\n",
@@ -623,7 +623,7 @@
         "        for f in zip(factors,customlim):\n",
         "            print(f)\n",
         "            plot_all(all_labels, all_w, [f[0]], myFigsize)\n",
-        "            if customlim == True:\n",
+        "            if customlimTF == True:\n",
         "                plt.ylim(f[1][0], f[1][1])\n",
         "            # plt.subplots_adjust(0,0,1,1) \n",
         "            # plt.gca().set_yticks([-2,0,2])\n",
@@ -649,7 +649,7 @@
         "            for f in zip(factors,flabel,customlim):\n",
         "                print(f)\n",
         "                plot_all(all_labels, all_w, [f[0]], myFigsize)\n",
-        "                if customlim == True:\n",
+        "                if customlimTF == True:\n",
         "                    plt.ylim(f[2][0], f[2][1])\n",
         "                # plt.subplots_adjust(0,0,1,1) \n",
         "                # plt.gca().set_yticks([-2,0,2])\n",
