--- a/RumbaughLab_psyTrack.ipynb
+++ b/RumbaughLab_psyTrack.ipynb
@@ -768,10 +768,16 @@
       "cell_type": "code",
       "source": [
         "## Dealing with NaN\n",
+        "##---------------------------\n",
         "## important dispaly item for double check\n",
         "## dealing with potential missing data in the folder\n",
-        "print(allDat[allDat.isnull().any(axis=1)])\n",
-        "allDat = allDat.dropna()"
+        "\n",
+        "## check \n",
+        "# for i in allDat.columns:\n",
+        "#     print(i)\n",
+        "#     print(allDat[i].unique())\n",
+        "print(allDat[allDat['Go/NoGo'].isna()])\n",
+        "allDat = allDat[allDat['Go/NoGo'].notna()]"
       ],
       "metadata": {
         "id": "nfY4G7lljB_h"
